--- a/mystyle.css
+++ b/mystyle.css
@@ -16,3 +16,11 @@ h3 {
   color: pink;
   margin-left: 20px;
 }
+
+code {
+  font-family: Consolas,"courier new";
+  color: crimson;
+  background-color: #f1f1f1;
+  padding: 2px;
+  font-size: 105%;
+}
